# Parallel-programming

./: Figure11.2.c  G2-FinalPPT.pptx  Observer Pattern.cpp  README.md
Image-processing-algorithm-master/: README.md
Image_processing/: CMakeLists.txt  Sobel_Edge_Detection.cpp  main.cpp  open_image.cpp  pixel_boost_Boost.cpp  pixel_wise_OpenMP.cpp  pixel_wise_origin.cpp  pixel_wise_standardlib.cpp  test_1.cpp  test_2.cpp
Image_processing/pixel_pthread/: pixel_wise_pthread.cpp
Image_processing/pixel_std/: pixel_origin.cpp  pixel_standard.cpp  pixel_standard_lock_guard.cpp  pixel_standard_mutex.cpp  pixel_standard_recursive_mutex.cpp  pixel_standard_unique_lock.cpp
Image_processing/twist/: twist_pthread.cpp  twist_std.cpp
StartCode/: CMakeLists.txt  CMakePresets.json
StartCode/src/: bandwidth.cpp  latency.cpp  sum.cpp
